# irq

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: mock-pac.rs
mock-pac/: Cargo.toml
mock-pac/src/: lib.rs
src/: lib.rs  lock.rs
tests/: compile-fail.rs
tests/compile-fail/: handler-inside-scope.rs  handler-inside-scope.stderr  handler-registered-twice.rs  handler-registered-twice.stderr
