[package]
name = "irq"
version = "0.2.3"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
edition = "2018"
description = "Scoped interrupt handlers and interrupt locks for sharing data"
documentation = "https://docs.rs/irq/"
repository = "https://github.com/jonas-schievink/irq.git"
keywords = ["interrupt", "scoped", "handler", "handling"]
categories = ["embedded", "no-std"]
readme = "README.md"
license = "0BSD"

# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend a new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased\n"
replace = """
## Unreleased

No changes.

## [{{version}} - {{date}}](https://github.com/jonas-schievink/irq/releases/tag/v{{version}})
"""

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'irq = "[a-z0-9\\.-]+"'
replace = 'irq = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/irq/[a-z0-9\\.-]+"
replace = "https://docs.rs/irq/{{version}}"

[badges]
travis-ci = { repository = "jonas-schievink/irq" }
maintenance = { status = "actively-developed" }

# Dependencies are intentionally kept light since running compile-fail tests or Miri tests requires
# `cargo clean`ing out old compilation artifacts.

[dev-dependencies]
once_cell = "1.3.0"
cortex-m-rt = "0.6.11"
mock-pac = { path = "mock-pac" }

[workspace]
members = ["mock-pac"]
